adicion de query en listado de politicas
